# egor-xlsx-example

./: pyproject.toml  readme.md
app/: main.py
app/templates/: index.html
docs/: index.html
tests/: conftest.py  test_xlsx.py
