[project]
name = "egor-xlsx-example"
version = "0.1.0"
description = ""
authors = [
    {name = "John Makarov",email = "johnmakarovqa@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "allure-pytest (>=2.16.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "pandas (>=3.0.3,<4.0.0)"
]
